Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UCharacterMovementComponent.h

	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_InitialPushForceFactor_GET(UCharacterMovementComponent* Ptr) { return Ptr->InitialPushForceFactor; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_InitialPushForceFactor_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->InitialPushForceFactor = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_JumpOffJumpZFactor_GET(UCharacterMovementComponent* Ptr) { return Ptr->JumpOffJumpZFactor; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_JumpOffJumpZFactor_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->JumpOffJumpZFactor = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_JumpOutOfWaterPitch_GET(UCharacterMovementComponent* Ptr) { return Ptr->JumpOutOfWaterPitch; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_JumpOutOfWaterPitch_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->JumpOutOfWaterPitch = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_JumpZVelocity_GET(UCharacterMovementComponent* Ptr) { return Ptr->JumpZVelocity; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_JumpZVelocity_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->JumpZVelocity = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_LedgeCheckThreshold_GET(UCharacterMovementComponent* Ptr) { return Ptr->LedgeCheckThreshold; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_LedgeCheckThreshold_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->LedgeCheckThreshold = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_ListenServerNetworkSimulatedSmoothLocationTime_GET(UCharacterMovementComponent* Ptr) { return Ptr->ListenServerNetworkSimulatedSmoothLocationTime; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_ListenServerNetworkSimulatedSmoothLocationTime_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->ListenServerNetworkSimulatedSmoothLocationTime = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_ListenServerNetworkSimulatedSmoothRotationTime_GET(UCharacterMovementComponent* Ptr) { return Ptr->ListenServerNetworkSimulatedSmoothRotationTime; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_ListenServerNetworkSimulatedSmoothRotationTime_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->ListenServerNetworkSimulatedSmoothRotationTime = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_Mass_GET(UCharacterMovementComponent* Ptr) { return Ptr->Mass; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_Mass_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->Mass = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_MaxAcceleration_GET(UCharacterMovementComponent* Ptr) { return Ptr->MaxAcceleration; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_MaxAcceleration_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->MaxAcceleration = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_MaxCustomMovementSpeed_GET(UCharacterMovementComponent* Ptr) { return Ptr->MaxCustomMovementSpeed; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_MaxCustomMovementSpeed_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->MaxCustomMovementSpeed = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_MaxDepenetrationWithGeometry_GET(UCharacterMovementComponent* Ptr) { return Ptr->MaxDepenetrationWithGeometry; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_MaxDepenetrationWithGeometry_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->MaxDepenetrationWithGeometry = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_MaxDepenetrationWithGeometryAsProxy_GET(UCharacterMovementComponent* Ptr) { return Ptr->MaxDepenetrationWithGeometryAsProxy; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_MaxDepenetrationWithGeometryAsProxy_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->MaxDepenetrationWithGeometryAsProxy = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_MaxDepenetrationWithPawn_GET(UCharacterMovementComponent* Ptr) { return Ptr->MaxDepenetrationWithPawn; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_MaxDepenetrationWithPawn_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->MaxDepenetrationWithPawn = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_MaxDepenetrationWithPawnAsProxy_GET(UCharacterMovementComponent* Ptr) { return Ptr->MaxDepenetrationWithPawnAsProxy; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_MaxDepenetrationWithPawnAsProxy_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->MaxDepenetrationWithPawnAsProxy = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_MaxFlySpeed_GET(UCharacterMovementComponent* Ptr) { return Ptr->MaxFlySpeed; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_MaxFlySpeed_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->MaxFlySpeed = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_MaxOutOfWaterStepHeight_GET(UCharacterMovementComponent* Ptr) { return Ptr->MaxOutOfWaterStepHeight; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_MaxOutOfWaterStepHeight_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->MaxOutOfWaterStepHeight = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_MaxSimulationIterations_GET(UCharacterMovementComponent* Ptr) { return Ptr->MaxSimulationIterations; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_MaxSimulationIterations_SET(UCharacterMovementComponent* Ptr, int32 Value) { Ptr->MaxSimulationIterations = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_MaxSimulationTimeStep_GET(UCharacterMovementComponent* Ptr) { return Ptr->MaxSimulationTimeStep; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_MaxSimulationTimeStep_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->MaxSimulationTimeStep = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_MaxStepHeight_GET(UCharacterMovementComponent* Ptr) { return Ptr->MaxStepHeight; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_MaxStepHeight_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->MaxStepHeight = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_MaxSwimSpeed_GET(UCharacterMovementComponent* Ptr) { return Ptr->MaxSwimSpeed; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_MaxSwimSpeed_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->MaxSwimSpeed = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_MaxTouchForce_GET(UCharacterMovementComponent* Ptr) { return Ptr->MaxTouchForce; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_MaxTouchForce_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->MaxTouchForce = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_MaxWalkSpeed_GET(UCharacterMovementComponent* Ptr) { return Ptr->MaxWalkSpeed; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_MaxWalkSpeed_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->MaxWalkSpeed = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_MaxWalkSpeedCrouched_GET(UCharacterMovementComponent* Ptr) { return Ptr->MaxWalkSpeedCrouched; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_MaxWalkSpeedCrouched_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->MaxWalkSpeedCrouched = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_MinAnalogWalkSpeed_GET(UCharacterMovementComponent* Ptr) { return Ptr->MinAnalogWalkSpeed; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_MinAnalogWalkSpeed_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->MinAnalogWalkSpeed = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_MinTimeBetweenTimeStampResets_GET(UCharacterMovementComponent* Ptr) { return Ptr->MinTimeBetweenTimeStampResets; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_MinTimeBetweenTimeStampResets_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->MinTimeBetweenTimeStampResets = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_MinTouchForce_GET(UCharacterMovementComponent* Ptr) { return Ptr->MinTouchForce; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_MinTouchForce_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->MinTouchForce = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_NavMeshProjectionHeightScaleDown_GET(UCharacterMovementComponent* Ptr) { return Ptr->NavMeshProjectionHeightScaleDown; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_NavMeshProjectionHeightScaleDown_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->NavMeshProjectionHeightScaleDown = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_NavMeshProjectionHeightScaleUp_GET(UCharacterMovementComponent* Ptr) { return Ptr->NavMeshProjectionHeightScaleUp; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_NavMeshProjectionHeightScaleUp_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->NavMeshProjectionHeightScaleUp = Value; }
	
	DOTNET_EXPORT auto E_PROP_UCharacterMovementComponent_NavMeshProjectionInterpSpeed_GET(UCharacterMovementComponent* Ptr) { return Ptr->NavMeshProjectionInterpSpeed; }
	DOTNET_EXPORT void E_PROP_UCharacterMovementComponent_NavMeshProjectionInterpSpeed_SET(UCharacterMovementComponent* Ptr, float Value) { Ptr->NavMeshProjectionInterpSpeed = Value; }